--- a/Source/Android/app/src/main/res/layout/list_item_cheat.xml
+++ b/Source/Android/app/src/main/res/layout/list_item_cheat.xml
@@ -26,7 +26,7 @@
         android:id="@+id/checkbox"
         android:layout_width="48dp"
         android:layout_height="64dp"
-        android:backgroundTint="?attr/colorAccent"
+        android:backgroundTint="?attr/colorPrimaryDark"
         android:focusable="true"
         android:gravity="center"
         android:nextFocusRight="@id/root"
