--- a/Source/Android/app/src/main/res/layout/fragment_cheat_warning.xml
+++ b/Source/Android/app/src/main/res/layout/fragment_cheat_warning.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="false">
+    android:clickable="false"
+	android:background="@color/dolphin_background">
 
     <Button
         android:id="@+id/button_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="156dp"
+        android:layout_height="46dp"
         android:layout_margin="@dimen/spacing_small"
-        android:backgroundTint="?attr/colorAccent"
+        android:backgroundTint="?attr/colorPrimaryDark"
         android:text="@string/cheats_open_settings"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
