--- a/Source/Android/app/src/main/res/values/arrays.xml
+++ b/Source/Android/app/src/main/res/values/arrays.xml
@@ -101,7 +101,7 @@
     <string-array name="serialPort1DeviceEntries" translatable="false">
         <item>Nothing</item>
         <item>Broadband Adapter (XLink Kai)</item>
-        <item>Broadband Adapter (Built In)</item>
+        <item>Broadband Adapter (HLE)</item>
     </string-array>
     <integer-array name="serialPort1DeviceValues" translatable="false">
         <item>255</item>
