--- a/Source/Android/app/src/main/res/layout-notouch/fragment_emulation.xml
+++ b/Source/Android/app/src/main/res/layout-notouch/fragment_emulation.xml
@@ -1,15 +1,15 @@
-<FrameLayout
+<View
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_emulation"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-	<SurfaceView xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@+id/surface_emulation"
-		android:layout_height="match_parent"
-		android:layout_width="match_parent"
+    <SurfaceView
+        android:id="@+id/surface_emulation"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
 		android:background="@color/dolphin_background"
-		android:focusable="false"
-		android:focusableInTouchMode="false"/>
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
-</FrameLayout>
+</View>
