--- a/Source/Android/app/src/main/res/layout/card_game.xml
+++ b/Source/Android/app/src/main/res/layout/card_game.xml
@@ -12,13 +12,13 @@
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:padding="0dp"
-    app:cardCornerRadius="3dp">
+    app:cardCornerRadius="0dp">
 
 
     <ImageView
         android:id="@+id/image_game_screen"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="185dp"
         android:layout_marginHorizontal="0dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
