--- a/Source/Android/app/src/main/res/layout/fragment_emulation.xml
+++ b/Source/Android/app/src/main/res/layout/fragment_emulation.xml
@@ -1,5 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_emulation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dolphin_background"
@@ -12,7 +14,7 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:focusableInTouchMode="false" />
 
     <!-- This is the onscreen input overlay -->
     <org.dolphinemu.dolphinemu.overlay.InputOverlay
@@ -20,7 +22,7 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:focusable="true"
-        android:focusableInTouchMode="true"/>
+        android:focusableInTouchMode="true" />
 
     <Button
         android:id="@+id/done_control_config"
@@ -31,6 +33,6 @@
         android:background="@drawable/button_primary_gradient"
         android:textColor="?attr/colorOnGradientPrimary"
         android:text="@string/emulation_done"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </FrameLayout>
