--- a/Source/Android/app/src/main/res/layout/list_item_setting_checkbox.xml
+++ b/Source/Android/app/src/main/res/layout/list_item_setting_checkbox.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:focusable="true"
     android:clickable="true">
-
     <TextView
         android:id="@+id/text_setting_name"
         style="@style/TextAppearance.MaterialComponents.Headline5"
