--- a/Source/Android/app/src/main/res/layout/list_item_submenu.xml
+++ b/Source/Android/app/src/main/res/layout/list_item_submenu.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,6 +20,6 @@
         android:layout_marginEnd="@dimen/spacing_large"
         android:layout_marginTop="@dimen/spacing_large"
         android:id="@+id/text_setting_name"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 
 </RelativeLayout>
