Add 0.5x resolution setting

--- a/Source/Android/app/src/main/res/values/arrays.xml
+++ b/Source/Android/app/src/main/res/values/arrays.xml
@@ -257,6 +257,7 @@
 
     <!-- Internal Resolution Preference -->
     <string-array name="internalResolutionEntries" translatable="false">
+        <item>0.5x Native (320x264)</item>
         <item>1x Native (640x528)</item>
         <item>1.5x Native (960x792)</item>
         <item>2x Native (1280x1056) for 720p</item>
@@ -268,6 +269,7 @@
         <item>6x Native (3840x3168) for 4K</item>
     </string-array>
     <integer-array name="internalResolutionValues" translatable="false">
+        <item>50</item>
         <item>100</item>
         <item>150</item>
         <item>200</item>
